--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>TodoList</title>
+    <link rel="stylesheet" href="./src/assets/bootstrap.min.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./src/assets/bootstrap.bundle.min.js"></script>
+    <script src="./src/assets/bootstrap.min.js"></script>
   </body>
 </html>
